# whohas

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TESTING.md  docker-compose.yml  justfile
.github/workflows/: docker.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_directory_filters.py  003_add_membership_tables.py  004_add_guid_and_stale.py
backend/app/: config.py  db.py  events.py  main.py
backend/app/api/: directories.py  graph.py  groups.py  insights.py  memberships.py  sync.py  users.py
backend/app/models/: __init__.py  directory.py  group.py  membership.py  sync_run.py  user.py
backend/app/schemas/: insights.py
backend/app/services/: insights.py  ldap_client.py  memberships.py  sync.py
backend/tests/integration/: conftest.py  test_guid_stale.py  test_insights.py  test_memberships.py  test_samba_ad.py  test_sync.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/scripts/: generate-api-types.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/directories/: page.tsx
frontend/src/components/directories/: connection-test-button.tsx  connection-wizard.tsx  directory-card.tsx
frontend/src/hooks/: use-directories.ts  use-graph.ts  use-groups.ts  use-insights.ts  use-user-memberships.ts  use-users.ts
frontend/src/lib/: api-types.ts  api.ts  graph-layout.ts  graph-types.ts  query-keys.ts
test-fixtures/ldap/: 00-seed.ldif
test-fixtures/samba-ad/: 00-seed.sh
(+24 files in other folders)
