[project]
name = "whohas-backend"
version = "0.1.0"
description = "Identity Intelligence Layer — AD/LDAP visualization, search, and analytics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "ldap3>=2.9",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires running OpenLDAP + Postgres (deselect with -m 'not integration')",
    "samba_ad: requires running Samba AD + Postgres (run with -m samba_ad)",
]
testpaths = ["tests"]
